Merge all face detection libraries into one project